<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>simple_publisher_crash</name>
    <version>1.0.0</version>
    <description>
        test for simple publisher
    </description>
    <author>pangmj</author>
    <maintainer email="pangmj@autoxing.com">pangmj</maintainer>
    <license>BSD</license>

    <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>ax_msgs</depend>

    <test_depend>roslib</test_depend>
    <test_depend>rospy</test_depend>
    <test_depend>rostest</test_depend>
    <test_depend>rosunit</test_depend>
</package>
